@@ -611,8 +611,10 @@ namespace MeGUI.packages.video.x265
         #region codec-specific overload functions
         protected override string getCommandline()
         {
-            return x265Encoder.genCommandline(null, null, null, -1, -1, 0, 1, 1, Settings as x265Settings, null, null);
+            ulong x = 1;
+            return x265Encoder.genCommandline(null, null, null, -1, -1, 0, 1, ref x, Settings as x265Settings, null, null);
         }
+
         /// <summary>
         /// Does all the necessary adjustments after a GUI change has been made.
         /// </summary>
